# GV-Staff-Monitor

./: .gitignore  0_deploy.txt  test-ack.js  test-api.js  test_server.expect  test_server_95.expect
.github/workflows/: build-desktop.yml  deploy.yml
backend/: create-admin.ts  package-lock.json  package.json  prisma.config.ts.bak  seed_duplicates.ts  seed_duplicates_simple.ts  test-db.js  test_activity_log.ts  test_upload.js  tsconfig.json  wipeData.ts
backend/prisma/: dev.db  schema.prisma  seed.ts
backend/src/: clear-test-data.ts  index.ts
backend/src/lib/: prisma.ts  storage.js  storage.ts
backend/src/middleware/: authenticate.ts  requireAdmin.ts
backend/src/routes/: activity.routes.ts  auth.routes.ts  dashboard.routes.ts  debug.routes.ts  messages.routes.ts  screenshots.routes.ts  staff.routes.ts  tasks.routes.ts  time.routes.ts  users.routes.ts
backend/src/tasks/: autoDelete.ts
deploy/: 1_Set up job.txt  2_Build appleboy_ssh-action@v1.0.3.txt  3_Checkout code.txt  4_Deploy to Server.txt  8_Post Checkout code.txt  9_Complete job.txt  system.txt
frontend/: index.html  package-lock.json  package.json  tracker.html  vite.config.ts
frontend/src/: App.tsx  Tracker.tsx  TrackerApp.tsx  TrackerMain.tsx  index.css  tracker-main.tsx
frontend/src-tauri/: Cargo.toml  Info.plist  entitlements.plist  tauri.conf.json  test_xcap.rs
frontend/src-tauri/src/: api.rs  app.manifest  gv_capture.bat  lib.rs  screenshot.rs  state.rs  window.rs  windows_capture.rs
frontend/src-tauri/src/capture/: gv_capture.cs  macos.rs  mod.rs  windows.rs
frontend/src/components/: Layout.tsx  Sidebar.tsx
frontend/src/components/ui/: Badge.tsx  Button.tsx  DateFilterSelect.tsx  GlassCard.tsx  Lightbox.tsx  SearchableSelect.tsx
frontend/src/pages/: LoginView.tsx  ScreenshotsView.tsx  SettingsView.tsx  TasksView.tsx  TeamView.tsx  UserDetailView.tsx  UsersView.tsx  WebsitesView.tsx  WorkHoursView.tsx
frontend/src/services/: api.ts
wgc_test/: Cargo.toml
wgc_test/src/: main.rs
