[package]
name = "app"
version = "0.6.26"
description = "GV Staff Monitor"
authors = ["GV Team"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
tauri = { version = "2.10.0", features = [] }
tauri-plugin-log = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"

# Image encoding / compression
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }

# HTTP client for API syncing
reqwest = { version = "0.12", features = ["json", "multipart"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Base64 (for logging only; multipart sends raw bytes)
base64 = "0.22"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Hashing
sha2 = "0.10"
hex = "0.4"

# Window Tracking
active-win-pos-rs = "0.8"
lazy_static = "1.5.0"
device_query = "4.0.1"
tauri-plugin-shell = "2.3.5"
xcap = "0.8.2"
scrap = "0.5.0"
winapi = { version = "0.3.9", features = ["objbase"] }

